# sKrt

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  CLIENTS_PLAN.md  DEPLOY.md  DEPLOY_PRODUCTION.md  DEPLOY_SAME_HOST.md  Dockerfile  PAYMENT_GATEWAY.md  SECURITY_BASELINE.md  _gen_ut.py  _mk1.py  _patch_auth_quota.py  _patch_dl.py  _patch_fe1.py  docker-compose.yml  prompt.txt  render.yaml  requirements.txt  setup-venv.cmd  setup-venv.ps1  setup-venv.sh  start.cmd  start.ps1  start.sh
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.git_backup_20260327_160208/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
.git_backup_20260327_160208/logs/: HEAD
.git_backup_20260327_160331/: COMMIT_EDITMSG  config  index
.git_backup_20260327_160331/logs/: HEAD
backend/: __init__.py  main.py  runtime_config.py
backend/scripts/: check_baidu_ocr.py  migrate_knowledge_sqlite_to_pg.py  rebuild_gte_index.py  verify_end2end.py
backend/services/: ai_reverse_proxy.py  billing_mode.py  chunker.py  client_ip.py  cross_doc_ref.py  document_parser.py  (+23 more)
clients/: README.md  prepare-release.ps1
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/src/: main.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: cleanup-c-drive-caches.ps1  dev-cache-env.ps1  install-dev-cache-to-d.ps1  verify-d-layout.ps1  verify-frontend-deploy.sh
twa-skrt/: gen_twa_project.js  local-manifest.webmanifest
(+118 files in other folders)
