[package]
name = "skrt_desktop"
version = "0.1.0"
description = "sKrt desktop client"
authors = ["sKrt"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
